--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header.main-header
+      img(src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaKzXtsptN1CUz0rP8d2NJBbt9A5JX6acZIg&s')
     block content
